added health page to nav bar

--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -11,5 +11,6 @@
   "connect": "Connect",
   "donate": "Donate",
   "support": "Support Us",
-  "journalism": "Env Journalism"
+  "journalism": "Env Journalism",
+  "health": "Health"
 }
