--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -11,5 +11,6 @@
   "connect": "БИДЭНТЭЙ ХОЛБОГДОХ",
   "donate": "ХАНДИВЛАХ",
   "support": "Хандивлах",
-  "journalism": "Сэтгүүлчдийн хөтөлбөр"
+  "journalism": "Сэтгүүлчдийн хөтөлбөр",
+  "health": "Эрүүл мэнд"
 }
