added mobile dropdown logic

--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -12,5 +12,5 @@
   "donate": "ХАНДИВЛАХ",
   "support": "Хандивлах",
   "journalism": "Сэтгүүлчдийн хөтөлбөр",
-  "projects": "Төсөлүүд"
+  "projects": "Төслүүд"
 }
