--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -12,9 +12,6 @@
   "donate": "Donate",
   "support": "Support Us",
   "journalism": "Env Journalism",
-<<<<<<< HEAD
-  "health": "Health"
-=======
+  "health": "Health",
   "projects": "Projects"
->>>>>>> develop
 }
