--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -12,9 +12,6 @@
   "donate": "ХАНДИВЛАХ",
   "support": "Хандивлах",
   "journalism": "Сэтгүүлчдийн хөтөлбөр",
-<<<<<<< HEAD
-  "health": "Эрүүл мэнд"
-=======
+  "health": "Эрүүл мэнд",
   "projects": "Төслүүд"
->>>>>>> develop
 }
