--- a/public/locales/mng.json
+++ b/public/locales/mng.json
@@ -45,6 +45,8 @@
   "nav": {
     "home": "Нүүр хуудас",
     "takeAction": "Таны оролцоо",
+    "health": "Эрүүл мэнд",
+    "projects": "Төслүүд",
     "news": "Мэдээ",
     "agaarNeg": "Агаар Нэг",
     "aboutUs": "Бидний тухай",
