Add health page (#121)
* added health page to nav bar

* added health queries

* added ta and news carousel

* added iframe

* merged with develop

* updated locales

* updated health queries

* updated health diagram styling

* fixed health diagram mobile styling and added languagle switch

* fixed news carousel styling

* Update yarn.lock

---------

Co-authored-by: Temuulen Erdenekhuu <bg.genio@gmail.com>

--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -12,5 +12,6 @@
   "donate": "Donate",
   "support": "Support Us",
   "journalism": "Env Journalism",
+  "health": "Health",
   "projects": "Projects"
 }
