--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -12,5 +12,6 @@
   "donate": "ХАНДИВЛАХ",
   "support": "Хандивлах",
   "journalism": "Сэтгүүлчдийн хөтөлбөр",
+  "health": "Эрүүл мэнд",
   "projects": "Төслүүд"
 }
