--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -1,6 +1,7 @@
 {
   "home": "Home",
-  "takeAction": "Take Action",
+  "takeAction": "Solutions",
+  "policy": "Policy",
   "news": "News",
   "agaarNeg": "AGAAR NEG",
   "aboutUs": "About Us",
