--- a/public/locales/mn/footer.json
+++ b/public/locales/mn/footer.json
@@ -8,8 +8,10 @@
   },
   "nav": {
     "home": "нүүр хуудас",
-    "action": "таны оролцоо",
+    "action": "Шийдлүүд",
     "news": "Мэдээ",
+    "health": "Эрүүл мэнд",
+    "policy": "Бодлого",
     "agaarNeg": "Агаар Нэг",
     "waysToDonate": "Хандивлах",
     "ourStory": "Бидний түүх",
