--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -1,6 +1,7 @@
 {
   "home": "Нүүр хуудас",
-  "takeAction": "Таны оролцоо",
+  "takeAction": "Шийдэл",
+  "policy": "Бодлого",
   "news": "Мэдээ",
   "agaarNeg": "Агаар Нэг",
   "aboutUs": "Бидний тухай",
