--- a/public/locales/mng.json
+++ b/public/locales/mng.json
@@ -44,7 +44,7 @@
 
   "nav": {
     "home": "Нүүр хуудас",
-    "takeAction": "Таны оролцоо",
+    "takeAction": "Шийдэл",
     "health": "Эрүүл мэнд",
     "projects": "Төслүүд",
     "news": "Мэдээ",
