Revert "Update header and footer"
This reverts commit 23ac7c95430c34b6a83e63dec9b38f559d0243e1.

--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -8,12 +8,10 @@
   },
   "nav": {
     "home": "home",
-    "action": "Solutions",
+    "action": "take action",
     "news": "news",
     "agaarNeg": "AGAAR NEG",
     "about": "about us",
-    "policy": "Policy",
-    "health": "Health",
     "waysToDonate": "Ways to Donate",
     "ourStory": "Our Story",
     "impact": "Impact",
