--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -1,7 +1,6 @@
 {
   "home": "Home",
-  "takeAction": "Solutions",
-  "policy": "Policy",
+  "takeAction": "Take Action",
   "news": "News",
   "agaarNeg": "AGAAR NEG",
   "aboutUs": "About Us",
