--- a/public/locales/mn/footer.json
+++ b/public/locales/mn/footer.json
@@ -8,10 +8,8 @@
   },
   "nav": {
     "home": "нүүр хуудас",
-    "action": "Шийдлүүд",
+    "action": "таны оролцоо",
     "news": "Мэдээ",
-    "health": "Эрүүл мэнд",
-    "policy": "Бодлого",
     "agaarNeg": "Агаар Нэг",
     "waysToDonate": "Хандивлах",
     "ourStory": "Бидний түүх",
