--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -1,7 +1,6 @@
 {
   "home": "Нүүр хуудас",
-  "takeAction": "Шийдэл",
-  "policy": "Бодлого",
+  "takeAction": "Таны оролцоо",
   "news": "Мэдээ",
   "agaarNeg": "Агаар Нэг",
   "aboutUs": "Бидний тухай",
