--- a/public/locales/mn/policy.json
+++ b/public/locales/mn/policy.json
@@ -12,6 +12,13 @@
         "status": "Төлөв",
         "year": "Он"
     },
+    "sortButton": "Эрэмбэлэх",
+    "sortBy": {
+        "dateAsc": "Батлагдсан огноо (шинэ - хуучин)",
+        "dateDesc": "Батлагдсан огноо (хуучин - шинэ)",
+        "nameAsc": "Баримтын нэр (A-Я)",
+        "nameDesc": "Баримтын нэр (Я-A)"
+    },
     "noPoliciesFound": {
         "all": "Бодлого олдсонгүй",
         "type": "Төрөл: Бодлого олдсонгүй",
