Added Policy Landing Page
Policy Landing Page - Web Version

--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -12,6 +12,7 @@
         "status": "Status",
         "year": "Year"
     },
+    "searchButton": "Search By",
     "sortButton": "Sort By",
     "sortBy": {
         "dateAsc": "Initiated Date (newest to oldest)",
