refactored and added better loading and error handling

--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -14,5 +14,8 @@
   "updatesTitle": "Updates",
   "furtherReadingTitle": "Further Reading",
   "relatedPoliciesTitle": "Related Policies",
-  "approvedOn": "Approved"
+  "approvedOn": "Approved",
+  "expand": "Expand",
+  "seeMore": "See more",
+  "collapse": "Collapse"
 }
