Done policy list on mobile
Improve filterButtons sizing

--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -26,5 +26,6 @@
         "topic": "Topic: No Policy Found",
         "status": "Status: No Policy Found",
         "year": "Year: No Policy Found"
-    }
+    },
+    "showMore": "Show More"
 }
