--- a/public/locales/mn/policy.json
+++ b/public/locales/mn/policy.json
@@ -26,5 +26,6 @@
         "topic": "Сэдэв: Бодлого олдсонгүй",
         "status": "Төлөв: Бодлого олдсонгүй",
         "year": "Он: Бодлого олдсонгүй"
-    }
+    },
+    "showMore": "Дэлгэрэнгүй"
 }
