--- a/public/locales/mn/policy.json
+++ b/public/locales/mn/policy.json
@@ -45,5 +45,9 @@
     "approvedOn": "Батлагдсан",
     "expand": "Дэлгэх",
     "seeMore": "бусад харах",
-    "collapse": "Хаах"
+    "collapse": "Хаах",
+    "error": {
+        "description": "Уучлаарай, таны хайж буй бодлогыг олж чадсангүй. Энэ бодлого устгагдсан эсвэл нүүж байж магадгүй.",
+        "tryAgain": "Дахин оролдох"
+    }
 }
