--- a/public/locales/mn/home.json
+++ b/public/locales/mn/home.json
@@ -13,7 +13,10 @@
     "seeMore": "Бүгд"
   },
   "health": {
-    "title": "Эрүүл мэнд"
+    "title": "Эрүүл мэнд",
+    "textTitle": "Агаарын бохирдол ба эрүүл мэнд",
+    "textDescription": "Агаарын бохирдол хүний ​​амьдралын бүхий л үе шатанд, бүхий л эрхтэн тогтолцоонд сөргөөр нөлөөлж байна.",
+    "learnMore": "Дэлгэрэнгүй"
   },
   "news": {
     "title": "Мэдээ"
