Ticket #: GEN-70 Policy mobile version (#138)
* Improved health iframe view

Improved the health iframe view
Fixed the partners carousel

* Policy Page Policy Section

* Update policy filter components

* Added Sort Button on the Policy Landing Page

* Added Policy Landing Page

Policy Landing Page - Web Version

* Added the policy list Mobile version

Changed the policy list view on mobile

* Done policy list on mobile

Improve filterButtons sizing

* Changed Dropdown for mobile version

* Mobile Version updated

Updated the mobile version of the Policy Landing Page

* Updated Buttons Styles

Ticket#: GEN-70

* Improved Filter Buttons

Improved Filter Buttons on Mobile version

* Updated Filtering

Updated multiple selection when filtering

* Updated the filter buttons

Updated the filter buttons positions on mobile version

* Changed the comment

Changed comments after policy isn't found

* Changed the search text

Changed the search area text font

---------

Co-authored-by: Tuguldur UlamUndrakh <rbktgldr@gmail.com>

--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -27,6 +27,8 @@
         "status": "Status: No Policy Found",
         "year": "Year: No Policy Found"
     },
+
+    "showMore": "Show More"
     "backToPolicy": "Back to Policy Page",
     "tableHeaders": {
         "name": "Name",
@@ -51,3 +53,4 @@
         "tryAgain": "Try Again"
     }
 }
+
