--- a/public/locales/mn/policy.json
+++ b/public/locales/mn/policy.json
@@ -21,12 +21,13 @@
         "nameDesc": "Баримтын нэр (Я-A)"
     },
     "noPoliciesFound": {
-        "all": "Бодлого олдсонгүй",
-        "type": "Төрөл: Бодлого олдсонгүй",
-        "topic": "Сэдэв: Бодлого олдсонгүй",
-        "status": "Төлөв: Бодлого олдсонгүй",
-        "year": "Он: Бодлого олдсонгүй"
+        "all": "Баримт олдсонгүй",
+        "type": "Төрөл: Баримт олдсонгүй",
+        "topic": "Сэдэв: Баримт олдсонгүй",
+        "status": "Төлөв: Баримт олдсонгүй",
+        "year": "Он: Баримт олдсонгүй"
     },
+    "showMore": "Дэлгэрэнгүй"
     "backToPolicy": "Бодлогын жагсаалт руу буцах",
     "tableHeaders": {
         "name": "Нэр",
