wip policy section changes
- added health server side connection

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -20,5 +20,10 @@
   },
   "news": {
     "title": "News"
+  },
+  "policy": {
+    "title": "Policy",
+    "seeMore": "See more",
+    "learnMore": "Learn More"
   }
 }
