--- a/public/locales/mn/home.json
+++ b/public/locales/mn/home.json
@@ -20,5 +20,10 @@
   },
   "news": {
     "title": "Мэдээ"
+  },
+  "policy": {
+    "title": "Бодлого",
+    "seeMore": "Бүгд",
+    "learnMore": "Дэлгэрэнгүй"
   }
 }
