finish home page policy section
- fixed issue with H2 extra button not scrolling to the top
- added home page policy section logic

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -24,6 +24,8 @@
   "policy": {
     "title": "Policy",
     "seeMore": "See more",
-    "learnMore": "Learn More"
+    "learnMore": "Learn More",
+    "documentName": "Document Title",
+    "documentType": "Type"
   }
 }
