--- a/public/locales/mn/home.json
+++ b/public/locales/mn/home.json
@@ -24,6 +24,8 @@
   "policy": {
     "title": "Бодлого",
     "seeMore": "Бүгд",
-    "learnMore": "Дэлгэрэнгүй"
+    "learnMore": "Дэлгэрэнгүй",
+    "documentName": "БАРИМТЫН НЭР",
+    "documentType": "ТӨРӨЛ"
   }
 }
