Home Page Updates - Policy Page, Health Section and Take Action Updates (#143)
* base page setup

* health page + take action section

* updates to take action + health section

* added health section + policy section to home page queries

* wip policy section changes

- added health server side connection

* finish home page policy section

- fixed issue with H2 extra button not scrolling to the top
- added home page policy section logic

* remove console.log

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -8,10 +8,24 @@
     "applyNow": "Apply Now"
   },
   "takeAction": {
+    "gridTitle": "Solutions",
     "title": "Take Action",
     "seeMore": "See more"
   },
+  "health": {
+    "title": "Health",
+    "textTitle": "Air Pollution and Your Health",
+    "textDescription": "Air pollution affects every stage of human life and every organ system.",
+    "learnMore": "Learn More"
+  },
   "news": {
     "title": "News"
+  },
+  "policy": {
+    "title": "Policy",
+    "seeMore": "See more",
+    "learnMore": "Learn More",
+    "documentName": "Document Title",
+    "documentType": "Type"
   }
 }
