--- a/public/locales/mn/home.json
+++ b/public/locales/mn/home.json
@@ -8,10 +8,24 @@
     "applyNow": "АНКEТ БӨГЛӨХ"
   },
   "takeAction": {
+    "gridTitle": "Шийдэл",
     "title": "Таны оролцоо",
     "seeMore": "Бүгд"
   },
+  "health": {
+    "title": "Эрүүл мэнд",
+    "textTitle": "Агаарын бохирдол ба эрүүл мэнд",
+    "textDescription": "Агаарын бохирдол хүний ​​амьдралын бүхий л үе шатанд, бүхий л эрхтэн тогтолцоонд сөргөөр нөлөөлж байна.",
+    "learnMore": "Дэлгэрэнгүй"
+  },
   "news": {
     "title": "Мэдээ"
+  },
+  "policy": {
+    "title": "Бодлого",
+    "seeMore": "Бүгд",
+    "learnMore": "Дэлгэрэнгүй",
+    "documentName": "БАРИМТЫН НЭР",
+    "documentType": "ТӨРӨЛ"
   }
 }
