Fixed the Policy texts
Fixed JSON error

--- a/public/locales/mn/policy.json
+++ b/public/locales/mn/policy.json
@@ -27,7 +27,7 @@
         "status": "Төлөв: Баримт олдсонгүй",
         "year": "Он: Баримт олдсонгүй"
     },
-    "showMore": "Дэлгэрэнгүй"
+    "showMore": "Дэлгэрэнгүй",
     "backToPolicy": "Бодлогын жагсаалт руу буцах",
     "tableHeaders": {
         "name": "Нэр",
