--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -27,8 +27,7 @@
         "status": "Status: No Policy Found",
         "year": "Year: No Policy Found"
     },
-
-    "showMore": "Show More"
+    "showMore": "Show More",
     "backToPolicy": "Back to Policy Page",
     "tableHeaders": {
         "name": "Name",
