Fixed the policy pagination
Ticket #: GEN-55

--- a/public/locales/en/policy.json
+++ b/public/locales/en/policy.json
@@ -28,7 +28,7 @@
         "year": "Year: No Policy Found"
     },
 
-    "showMore": "Show More"
+    "showMore": "Show More",
     "backToPolicy": "Back to Policy Page",
     "tableHeaders": {
         "name": "Name",
