Updated our mission and vision statements
Changed texts on About Us Page

--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "title": "Who We Are",
-    "description": "The Breathe Mongolia - Clean Air Coalition is an international team of professionals and everyday citizens, working to end Mongolia’s air pollution crisis."
+    "description": "Breathe Mongolia - Clean Air Coalition is an international community of changemakers working to end Mongolia’s air pollution crisis to protect the global climate"
   },
   "subNavigationTabs": {
     "aboutUs": "About Us",
@@ -11,11 +11,11 @@
     "supportUs": "Support Us"
   },
   "ourMission": "Our Mission",
-  "missionStatement": "Our mission is to arm people with the resources to end air pollution in Mongolia",
+  "missionStatement": "To transform policies and narratives, connect and educate communities, and advance collaborative solutions to clean our air, protect our climate, and champion environmental justice",
   "ourVision": "Our Vision",
-  "visionStatement": "Our vision is clean, sustainable and prosperous Mongolia",
+  "visionStatement": "A sustainable future with clean air and a healthy climate for all",
   "whatWeDo": "What We Do",
-  "whatWeDoDescription": "We create bilingual digital space and set of tools to address the lack of a centralized source for quality information and insight to the current conditions in Mongolia by focusing on:",
+  "whatWeDoDescription": "We work to reduce the impact of air pollution on human health, influence policy changes to reduce pollution, increase public awareness, and promote collaboration to mitigate climate change and advance environmental justice:",
   "education": "Education",
   "educationDescription": "We educate the public so they can protect themselves and reduce emissions",
   "building": "Community",
