--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "title": "Бидний тухай",
-    "description": "Breathe Mongolia - Цэвэр агаарын эвсэл нь Монголын агаарын бохирдлын хямралыг арилгахаар ажиллаж буй олон улсын мэргэжлийн болон идэвхтэй иргэдийн баг юм."
+    "description": "Breathe Mongolia - Clean Air Coalition буюу Агаарын Харуул НҮТББ эвсэл нь дэлхийн уур амьсгалыг хамгаалж, Монгол улсын агаарын бохирдлын хямралыг зогсоохын төлөө ажиллаж буй олон улсын мэргэжилтнүүд болон идэвхтнүүдийн баг"
   },
   "subNavigationTabs": {
     "aboutUs": "Бидний тухай",
@@ -11,11 +11,11 @@
     "supportUs": "Биднийг дэмжих"
   },
   "ourMission": "Бидний зорилго",
-  "missionStatement": "Бидний эрхэм зорилго бол иргэдийг Монгол орны агаарын бохирдлыг бууруулах хэрэгслээр хангах явдал юм",
+  "missionStatement": "Бидний эрхэм зорилго бол бодлогын өөрчлөлтөд нөлөөлөх, олон нийтэд боловсрол олгох, агаарын бохирдлыг бууруулах, уур амьсгалын өөрчлөлтийг сааруулах, байгаль орчны шударга ёсыг дэмжих юм",
   "ourVision": "Алсын хараа",
-  "visionStatement": "Бидний алсын хараа нь цэвэр, тогтвортой, цэцэглэн хөгжиж буй Монгол улс юм",
+  "visionStatement": "Хүн бүрт цэвэр агаар, эрүүл уур амьсгалтай тогтвортой ирээдүйг бий болгох",
   "whatWeDo": "Бидний үйл ажиллагаа",
-  "whatWeDoDescription": "Бид Монгол орны өнөөгийн нөхцөл байдлын талаарх чанартай мэдээлэл, ойлголтын дутагдлыг арилгахын тулд, хоёр хэлээр дижитал орон зайнд төвлөрсөн эх үүсвэр, мөн багаж хэрэгслийг бүтээж байна. Ингэхдээ дараах талбар дээр төвлөрч ажиллаж байгаа билээ. Үүнд:",
+  "whatWeDoDescription": "Агаарын бохирдлын хүний эрүүл мэндэд үзүүлэх нөлөөг бууруулах, бохирдлыг бууруулах бодлогын өөрчлөлтөд нөлөөлөх, олон нийтийн мэдлэг ойлголтыг нэмэгдүүлэх, хамтын ажиллагааг дэмжих замаар уур амьсгалын өөрчлөлтийг сааруулах, байгаль орчны шударга ёсыг урагшлуулах чиглэлээр үйл ажиллагаа явуулдаг. Үүнд:",
   "education": "Боловсрол",
   "educationDescription": "Олон нийтэд агаарын бохирдлын талаар болон үүнээс хэрхэн ѳѳрсдийгѳѳ хамгаалах талаар мэдлэг олгох",
   "building": "Хамтын ажиллагаа",
